--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@types/node": "^16.18.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "eslint-config-prettier": "^8.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -24,21 +23,25 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest",
-      "prettier"
+    "react-app",
+    "react-app/jest",
+    "prettier"
     ]
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+    "last 1 chrome version",
+    "last 1 firefox version",
+    "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eclint": "^2.8.1",
+    "eslint-config-prettier": "^8.5.0"
   }
 }
